--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,9 +1,17 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Inicio</ion-title>
+    <ion-title>L´BARBERO</ion-title>
+    <h6>HAURCUTS & SHAVES</h6>
   </ion-toolbar>
 </ion-header>
 
+
+
+
+
+
 <ion-content >
-      <ion-title size="large">login</ion-title>
+      <ion-input label="Usuario:" labelPlacement="floating" placeholder="Nombre de Usuario"></ion-input>
+      <ion-input label="Clave:" labelPlacement="floating" placeholder="Clave"></ion-input>
+      <ion-button>Ingresar</ion-button>
 </ion-content>
