cambios en el page.

--- a/src/app/pages/principal/principal.page.html
+++ b/src/app/pages/principal/principal.page.html
@@ -1,10 +1,10 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Principal</ion-title>
+    <ion-title>!Bienvenidos a L´BARBERO¡</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-      <ion-input label="Usuario" labelPlacement="floating" placeholder="Enter text"></ion-input>
+      <ion-input label="Barbero" labelPlacement="floating" placeholder="Enter text"></ion-input>
       <ion-title size="large">principal</ion-title>
 </ion-content>
