--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,17 +1,22 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>L´BARBERO</ion-title>
-    <h6>HAURCUTS & SHAVES</h6>
-  </ion-toolbar>
-</ion-header>
 
 
 
 
 
 
-<ion-content >
-      <ion-input label="Usuario:" labelPlacement="floating" placeholder="Nombre de Usuario"></ion-input>
-      <ion-input label="Clave:" labelPlacement="floating" placeholder="Clave"></ion-input>
-      <ion-button>Ingresar</ion-button>
+
+<ion-content class="ion-padding">
+      <ion-img src="assets/images/login.svg"></ion-img>
+
+      <ion-item class="ion-margin-top">
+        <ion-input label="Usuario:" labelPlacement="floating" placeholder="Nombre del Usuario"></ion-input>
+      </ion-item>
+
+      <ion-item class="ion-margin-top">
+        <ion-input label="Contraseña:" labelPlacement="floating" placeholder="Ingrese su contraseña"></ion-input>
+      </ion-item>
+
+      
+
+      <ion-button class="ion-margin-top" expand="block">Ingresar</ion-button>
 </ion-content>
