--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -9,7 +9,7 @@
       <ion-img src="assets/images/login.svg"></ion-img>
 
       <ion-item class="ion-margin-top">
-        <ion-input label="Usuario:" labelPlacement="floating" placeholder="Nombre del Usuario"></ion-input>
+        <ion-input label="Usuario:" labelPlacement="floating" placeholder="Nombre del usuario"></ion-input>
       </ion-item>
 
       <ion-item class="ion-margin-top">
