imagen en principal

--- a/src/app/pages/principal/principal.page.html
+++ b/src/app/pages/principal/principal.page.html
@@ -1,6 +1,7 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>principal</ion-title>
+    <ion-title></ion-title>
+    <ion-img src="assets/images/home.svg"></ion-img>
   </ion-toolbar>
 </ion-header>
 
