cambios en principal texto

--- a/src/app/pages/principal/principal.page.html
+++ b/src/app/pages/principal/principal.page.html
@@ -6,6 +6,7 @@
 </ion-header>
 
 <ion-content>
-      <ion-input label="Floating label" labelPlacement="floating" placeholder="Enter text"></ion-input>
+      <ion-input label="Bienvenido ¡!" labelPlacement="floating" placeholder="Enter text"></ion-input>
+      <ion-input label="¿Qué servicio usaras?" labelPlacement="floating" placeholder="Enter text"></ion-input>
       <ion-title size="large">principal</ion-title>
 </ion-content>
