--- a/src/app/registro/registro.page.html
+++ b/src/app/registro/registro.page.html
@@ -1,23 +1,26 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Registro de Usuario</ion-title>
+    <ion-title>Registro</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="ion-padding">
   <form (ngSubmit)="onRegister()">
+    <ion-item>
+      <ion-label position="floating">Correo</ion-label>
+      <ion-input [(ngModel)]="email" name="email" type="email" required></ion-input>
+    </ion-item>
+
     <ion-item>
       <ion-label position="floating">Nombre de usuario</ion-label>
       <ion-input [(ngModel)]="username" name="username" required></ion-input>
     </ion-item>
-    <ion-item>
-      <ion-label position="floating">Correo electrónico</ion-label>
-      <ion-input [(ngModel)]="email" name="email" type="email" required></ion-input>
-    </ion-item>
+
     <ion-item>
       <ion-label position="floating">Contraseña</ion-label>
       <ion-input [(ngModel)]="password" name="password" type="password" required></ion-input>
     </ion-item>
-    <ion-button expand="full" type="submit">Registrarse</ion-button>
+
+    <ion-button expand="block" type="submit">Registrar</ion-button>
   </form>
 </ion-content>
