--- a/src/app/calendar/calendar.page.html
+++ b/src/app/calendar/calendar.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Calendario de Citas</ion-title>
+    <ion-img src="assets/images/principal.svg"></ion-img>
   </ion-toolbar>
 </ion-header>
 
