--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -6,18 +6,22 @@
     
     <!-- Correo electrónico -->
     <ion-item class="ion-margin-top">
-      <ion-label position="floating">Correo Electrónico</ion-label>
-      <ion-input 
+  
+      <ion-label position="floating">Mail <ion-icon name="mail"></ion-icon></ion-label>
+
+      <ion-input class="ion-margin-top"
+
         formControlName="email" 
         type="email" 
-        placeholder="Introduce tu correo electrónico">
+        placeholder="Introduce tú Mail">
       </ion-input>
     </ion-item>
 
     <!-- Contraseña -->
     <ion-item class="ion-margin-top">
-      <ion-label position="floating">Contraseña</ion-label>
-      <ion-input 
+
+      <ion-label position="floating">Contraseña <ion-icon name="key"></ion-icon></ion-label>
+      <ion-input class="ion-margin-top"
         formControlName="password" 
         type="password" 
         placeholder="Introduce tu contraseña">
